...
import com.example.prestamolabctma.ui.equipo.EquipoDetalleScreen
import com.example.prestamolabctma.ui.misprestamos.MisPrestamosScreen
import com.example.prestamolabctma.ui.solicitud.FormularioSolicitudScreen
import com.example.prestamolabctma.viewmodel.PrestamoViewModel

sealed class Screen(val route: String, val title: String) {
    object Catalogo : Screen("catalogo", "Catálogo")
    object EquipoDetalle : Screen("detalle/{equipoId}", "Detalle") {
        fun createRoute(equipoId: Int) = "detalle/$equipoId"
    }
    object Solicitar : Screen("solicitar/{equipoId}", "Solicitar") {
        fun createRoute(equipoId: Int) = "solicitar/$equipoId"
    }
    object MisSolicitudes : Screen("mis_solicitudes", "Mis Préstamos")
}

@Composable
fun AppNavigation() {
    val navController = rememberNavController()
    val viewModel: PrestamoViewModel = viewModel()
...
